--- a/BeatEmAll/BeatEmAll.vcxproj.filters
+++ b/BeatEmAll/BeatEmAll.vcxproj.filters
@@ -47,6 +47,15 @@
     <ClCompile Include="DDD\InfoCollection.cpp" />
     <ClCompile Include="DDD\InfoBuilder.cpp" />
     <ClCompile Include="DDD\CircleFixtureInfo.cpp" />
+    <ClCompile Include="Collision\CollisionCategory.cpp" />
+    <ClCompile Include="Tests\Tiled\TestTiledTransform.cpp" />
+    <ClCompile Include="Tests\TiledParser\RotationMap\TestRotation.cpp" />
+    <ClCompile Include="Tests\TiledParser\SmallMap\TestLittleMap.cpp" />
+    <ClCompile Include="Tests\TiledParser\SmallMap\TestTileMap.cpp" />
+    <ClCompile Include="Tests\TestCatch.cpp" />
+    <ClCompile Include="Tests\TestLayerTile.cpp" />
+    <ClCompile Include="FileIO\FileIO.cpp" />
+    <ClCompile Include="Tests\Collision\TestCollisionCategory.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation\Animation.h" />
@@ -216,5 +225,6 @@
     <ClInclude Include="DDD\FixtureShape\CircleShape.h" />
     <ClInclude Include="DDD\FixtureShape\PolygonShape.h" />
     <ClInclude Include="DDD\FixtureShape\VerticesShape.h" />
+    <ClInclude Include="FileIO\FileIO.h" />
   </ItemGroup>
 </Project>
