--- a/BeatEmAll/BeatEmAll.vcxproj
+++ b/BeatEmAll/BeatEmAll.vcxproj
@@ -254,13 +254,6 @@
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">C:\Users\LuisCopetti\Dropbox\PósJogos2016\02_Jogo2D\SFML-2.3.2-windows-vc14-32-bit\SFML-2.3.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <ClCompile Include="Mouse\MouseManager.cpp" />
-    <ClCompile Include="Tests\Collision\TestCollisionCategory.cpp" />
-    <ClCompile Include="Tests\TestCatch.cpp" />
-    <ClCompile Include="Tests\TestLayerTile.cpp" />
-    <ClCompile Include="Tests\TiledParser\RotationMap\TestRotation.cpp" />
-    <ClCompile Include="Tests\TiledParser\SmallMap\TestLittleMap.cpp" />
-    <ClCompile Include="Tests\TiledParser\SmallMap\TestTileMap.cpp" />
-    <ClCompile Include="Tests\Tiled\TestTiledTransform.cpp" />
     <ClCompile Include="Tiled\TiledLayerTile.cpp" />
     <ClCompile Include="Tiled\TiledLayer.cpp" />
     <ClCompile Include="Tiled\TiledMap.cpp" />
@@ -429,6 +422,7 @@
     <ClInclude Include="RapidXML\rapidxml_iterators.hpp" />
     <ClInclude Include="RapidXML\rapidxml_print.hpp" />
     <ClInclude Include="RapidXML\rapidxml_utils.hpp" />
+    <ClInclude Include="String\SplitString.h" />
     <ClInclude Include="Tiled\TiledLayerTile.h" />
     <ClInclude Include="Tiled\TiledLayer.h" />
     <ClInclude Include="Tiled\TiledImageTile.h" />
