--- a/BeatEmAll/BeatEmAll.vcxproj.filters
+++ b/BeatEmAll/BeatEmAll.vcxproj.filters
@@ -52,6 +52,7 @@
     <ClCompile Include="GameObjects\Factory\GameObjectFactory.cpp" />
     <ClCompile Include="Component\PhysicsComponent.cpp" />
     <ClCompile Include="GameObjects\Enemy.cpp" />
+    <ClCompile Include="DDD\GameObjects\PlayerUserDataInfo.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation\Animation.h" />
@@ -225,5 +226,6 @@
     <ClInclude Include="String\SplitString.h" />
     <ClInclude Include="GameObjects\Factory\GameObjectFactory.h" />
     <ClInclude Include="GameObjects\Enemy.h" />
+    <ClInclude Include="DDD\GameObjects\PlayerUserDataInfo.h" />
   </ItemGroup>
 </Project>
