--- a/BeatEmAll/BeatEmAll.vcxproj
+++ b/BeatEmAll/BeatEmAll.vcxproj
@@ -222,11 +222,9 @@
     <ClCompile Include="DDD\CircleFixtureInfo.cpp" />
     <ClCompile Include="DDD\FixtureInfo.cpp" />
     <ClCompile Include="DDD\GameObjectInfo.cpp" />
-    <ClCompile Include="DDD\GameObjects\PlayerUserDataInfo.cpp" />
     <ClCompile Include="DDD\GraphicInfo.cpp" />
     <ClCompile Include="DDD\InfoBuilder.cpp" />
     <ClCompile Include="DDD\InfoCollection.cpp" />
-    <ClCompile Include="DDD\Projectile\BulletUserDataInfo.cpp" />
     <ClCompile Include="DebugBoxDraw\SFMLDebugDraw.cpp" />
     <ClCompile Include="DebugBoxDraw\WorldConstants.cpp" />
     <ClCompile Include="FileIO\FileIO.cpp" />
@@ -380,6 +378,7 @@
     <ClInclude Include="DDD\FixtureShape\PolygonShape.h" />
     <ClInclude Include="DDD\FixtureShape\VerticesShape.h" />
     <ClInclude Include="DDD\GameObjectInfo.h" />
+    <ClInclude Include="DDD\GameObjects\EnemyDefaultUserDataInfo.h" />
     <ClInclude Include="DDD\GameObjects\PlayerUserDataInfo.h" />
     <ClInclude Include="DDD\GraphicInfo.h" />
     <ClInclude Include="DDD\InfoBuilder.h" />
