INT: First implementation of the state machine

--- a/BeatEmAll/BeatEmAll.vcxproj.filters
+++ b/BeatEmAll/BeatEmAll.vcxproj.filters
@@ -53,6 +53,8 @@
     <ClCompile Include="GameObjects\Enemy.cpp" />
     <ClCompile Include="GameObjects\StateMachine\StateManager.cpp" />
     <ClCompile Include="GameObjects\StateMachine\PlayerStates\StandingState.cpp" />
+    <ClCompile Include="GameObjects\StateMachine\PlayerStates\ParentPlayerState.cpp" />
+    <ClCompile Include="GameObjects\StateMachine\PlayerStates\PlayerState.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation\Animation.h" />
@@ -232,5 +234,7 @@
     <ClInclude Include="GameObjects\StateMachine\State.h" />
     <ClInclude Include="GameObjects\StateMachine\PlayerStates\StandingState.h" />
     <ClInclude Include="GameObjects\StateMachine\PlayerStates\WalkingState.h" />
+    <ClInclude Include="GameObjects\StateMachine\PlayerStates\ParentPlayerState.h" />
+    <ClInclude Include="GameObjects\StateMachine\PlayerStates\PlayerState.h" />
   </ItemGroup>
 </Project>
